Add Google site verification meta tag
Added Google site verification meta tag to the head section.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ro">
 <head>
+  <meta name="google-site-verification" content="bbpqRTSwfc1-FVnw3lz_XAoJNTwYchxbND3-hcKbeGM" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Dr. Veaceslav Berco – Acupunctură Salcea</title>
@@ -252,4 +253,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
