--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <div class="contact-info">
         <p><strong>Adresă:</strong> Dispensar medical Salcea</p>
         <p><strong>Telefon:</strong> <a href="tel:0748782705">0748782705</a></p>
-        <p><strong>Email:</strong> <a href="mailto:sberco71@gmail.com">sberco71@gmail.com</a></p>
+        <p><strong>Email:</strong> <a href="mailto:veaceslavberco@gmail.com">veaceslavberco@gmail.com</a></p>
 
 
         <h4>Localizare</h4>
@@ -222,7 +222,7 @@
             <button type="submit" class="btn">Trimite programarea</button>
             <div id="formStatus" class="form-status" aria-live="polite"></div>
           </div>
-          <p class="form-note">Mesajele vor fi trimise către <strong>sberco71@gmail.com</strong>.</p>
+          <p class="form-note">Mesajele vor fi trimise către <strong>veaceslavberco@gmail.com</strong>.</p>
         </form>
       </div>
     </div>
@@ -253,5 +253,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
